--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -15,9 +15,15 @@
 	<h1>Sophie Bluel <span>Architecte d'inteérieur</span></h1>
 	<nav>
 		<ul>
-			<li>projets</li>
-			<li>contact</li>
-			<li>login</li>
+			<li>
+				<a href="#">projets</a>
+			</li>
+			<li>
+				<a href="#">contact</a>
+			</li>
+			<li>
+				<a href="/login.html">login</a>
+			</li>
 			<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
 		</ul>
 	</nav>
