--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -37,6 +37,7 @@
     <label for="password">Mot de passe</label>
     <input type="text" name="password" id="password">
     <input type="submit" value="Se connecter">
+	<a href="#">Mot de passe oublié</a>
 </form>
 </section>
 </main>
