login function and token storage

--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -31,12 +31,12 @@
 <main>
 <section id="login">
     <h2>Login</h2>
-<form action="#">
+<form id="login-form">
     <label for="email">Email</label>
     <input type="text" name="email" id="email">
     <label for="password">Mot de passe</label>
-    <input type="text" name="password" id="password">
-    <input type="submit" value="Se connecter">
+    <input type="password" name="password" id="password">
+    <input id="login-btn" type="submit" value="Se connecter">
 	<a href="#">Mot de passe oublié</a>
 </form>
 </section>
@@ -49,5 +49,5 @@
 		</ul>
 	</nav>
 </footer>
-<script src="./assets/script.js"></script>
+<script src="./assets/login.js"></script>
 </body>
