dynamic login / logout nav links

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -21,8 +21,7 @@
 			<li>
 				<a href="#">contact</a>
 			</li>
-			<li>
-				<a href="/login.html">login</a>
+			<li id="log-btn">
 			</li>
 			<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
 		</ul>
