modal img gallery

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -47,7 +47,12 @@
 						</button>
 					</div>
 				</div>
-				<h2 id="titlemodal">Gallerie photos</h1>
+				<h2 id="titlemodal">Gallerie photos</h2>
+					<div class="modal-gallery"></div>
+					<div class="modal-separator"></div>
+					<div class="modal-bottom">
+						<button class="modal__add-btn">Ajouter une photo</button>
+					</div>
 			</div>
 		</aside>
 		<section id="introduction">
