form submit btn color change

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -81,12 +81,14 @@
 							</div>
 						</div>
 						<label class="form-label" for="form-title">Titre</label>
-						<input type="text" name="form-title" id="form-title" required />
+						<input class="modal-form-element" type="text" name="form-title" id="form-title" required />
 						<label class="form-label" for="form-category">Catégorie</label>
-						<select name="form-category" id="form-category" required />
+						<select class="modal-form-element" name="form-category" id="form-category" required />
 						</select>
 						<div class="modal-separator"></div>
-						<input class="modal-btn" type="submit" name="form-submit" id="form-submit" value="Valider">
+						<div class="modal-bottom">
+							<input class="modal-btn" type="submit" name="form-submit" id="form-submit" value="Valider">
+						</div>
 					</form>
 				</div>
 			</div>
