--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -45,7 +45,7 @@
 	<div class="error" id="password-error">
 		<p>Mot de passe invalide</p>
 	</div>
-    <input id="login-btn" type="submit" value="Se connecter">
+    <input class="form-submit-input" id="login-btn" type="submit" value="Se connecter">
 	<a href="#">Mot de passe oublié</a>
 </form>
 </section>
