--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -80,6 +80,7 @@
 								<p>jpg, png : 4mo max</p>
 							</div>
 						</div>
+						<div class="error" id="form-image-error"></div>
 						<label class="form-label" for="form-title">Titre</label>
 						<input class="modal-form-element" type="text" name="form-title" id="form-title" required />
 						<label class="form-label" for="form-category">Catégorie</label>
