--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -54,7 +54,7 @@
 						</button>
 					</div>
 				</div>
-				<h2 id="titlemodal">Gallerie photos</h2>
+				<h2 id="titlemodal">Gallerie photo</h2>
 				<div class="modal-content">
 					<div class="modal-gallery"></div>
 					<div class="modal-separator"></div>
@@ -88,7 +88,7 @@
 						</select>
 						<div class="modal-separator"></div>
 						<div class="modal-bottom">
-							<input class="modal-btn" type="submit" name="form-submit" id="form-submit" value="Valider">
+							<input class="modal-btn" type="submit" name="form-submit" id="form-submit" value="Valider" disabled>
 						</div>
 					</form>
 				</div>
@@ -129,7 +129,7 @@
 				<input type="email" name="email" id="email">
 				<label for="message">Message</label>
 				<textarea name="message" id="message" cols="30" rows="10"></textarea>
-				<input type="submit" value="Envoyer">
+				<input class="form-submit-input" type="submit" value="Envoyer">
 			</form>
 		</section>
 	</main>
